tools/selur-compose/crates/selur-compose-interp/tests/snapshots/interp__burble_legacy_coturn_env_default.snap
---
source: crates/selur-compose-interp/tests/interp.rs
expression: env_list
---
[
    "TURN_SECRET=change-me-in-production",
    "TURN_REALM=burble.local",
    "TURN_EXTERNAL_IP=",
]
